<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Post An Item"
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_baseline_clear_24"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_class"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:elevation="10dp"
        android:layout_below="@+id/toolbar"
        app:iconTint="@color/grey"
        app:iconGravity="textEnd"
        app:icon="@drawable/ic_baseline_arrow_drop_down_24"
        android:id="@+id/inputClass"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/input_title"
        android:backgroundTint="@color/black"
        app:backgroundTint="@color/black"
        android:layout_below="@+id/inputClass"
        android:id="@+id/inputTitle"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/input_subject"
        android:backgroundTint="@color/black"
        app:backgroundTint="@color/black"
        android:layout_below="@+id/inputTitle"
        android:id="@+id/inputSubject"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Input Unit"
        android:backgroundTint="@color/black"
        app:backgroundTint="@color/black"
        android:layout_below="@+id/inputSubject"
        android:id="@+id/inputUnit"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Save"
        app:backgroundTint="@color/purple_200"
        android:textColor="@color/black"
        app:elevation="10dp"
        android:layout_below="@+id/inputUnit"
        android:id="@+id/save"/>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save"
        app:indicatorColor="@color/purple_700"
        app:trackColor="@color/purple_700"
        android:layout_centerInParent="true"
      android:id="@+id/progress"/>




</RelativeLayout>
